<resources>
    <string name="app_name">2ndGroupProjectTransferApp</string>
    <string name="laguardia_transfer_services">LaGuardia Transfer Services</string>
    <string name="we_are_here_to_guide_you_towards_your_future">We are here to guide you towards your future.</string>
    <string name="menu">MENU</string>
    <string name="visit_your_faculty_advisor_to_discuss_options_available_and_to_customize_the_optimal_plan_for_you">Visit your faculty advisor to discuss options available and to customize the optimal plan for you.</string>
    <string name="transfer_credits">Transfer Credits</string>
    <string name="transfer_credits2">Transfer Credits</string>
    <string name="application_requirements">Application Requirements</string>
    <string name="financial_aid">Financial Aid</string>
    <string name="cuny_4_year_colleges">CUNY 4 Year Colleges</string>
    <string name="nys_4_year_colleges">NYS 4 Year Colleges</string>
    <string name="faqs">FAQs</string>
</resources>