<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laguardia_transfer_services"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#131313"
        android:textColorHighlight="#FF5252"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.993" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="431dp"
        android:text="@string/we_are_here_to_guide_you_towards_your_future"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="107dp"
        android:text="@string/menu"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="333dp"
        android:text="@string/transfer_credits2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="284dp"
        android:text="@string/application_requirements"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="255dp"
        android:text="@string/financial_aid"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="221dp"
        android:text="@string/cuny_4_year_colleges"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="284dp"
        android:layout_height="69dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="104dp"
        android:text="@string/visit_your_faculty_advisor_to_discuss_options_available_and_to_customize_the_optimal_plan_for_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="192dp"
        android:text="@string/nys_4_year_colleges"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="163dp"
        android:text="@string/faqs"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/collegesgtudents"
        android:layout_width="203dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="26dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/college" />

    <Button
        android:id="@+id/button"
        android:layout_width="142dp"
        android:layout_height="82dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#E14545"
        android:text="Student Success Stories"
        android:textColor="@color/white"
        android:textColorHighlight="@color/black"
        android:textColorHint="#F1EFEF"
        app:iconTint="#fafaf6"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/collegesgtudents"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageButton
        android:id="@+id/applicationButton1"
        android:layout_width="33dp"
        android:layout_height="23dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="165dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/collegesgtudents"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/applicationrequirements" />

    <ImageButton
        android:id="@+id/cuny4yrbutton"
        android:layout_width="25dp"
        android:layout_height="28dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/collegesgtudents"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applicationButton1"
        app:srcCompat="@drawable/cunyfouryearcolleges" />

    <ImageView
        android:id="@+id/laguardialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="28dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/laguardialogo" />

</androidx.constraintlayout.widget.ConstraintLayout>